# simulador-economia-capitalista-microfundada

./: .gitignore  EEUU.xlsx  README.md  abrir_simulador.bat  abrir_simulador_nuevo.bat  app.py  audit_benchmark_estados_unidos_2026-04-20.md  auditoria_benchmark_eeuu_2026-04-20.md  estado-social-intensivo-benchmark.xlsx  estado-social-intensivo-benchmark_error.txt  estados-unidos-mixto.xlsx  estados-unidos-mixto_error.txt  guatemala-mas-liberal.xlsx  guatemala-mas-liberal_error.txt  modelo_cerrado_demanda_trabajadores.xlsx  modelo_rentabilidad_canasta.xlsx  noruega-economia-del-bienestar.xlsx  noruega-economia-del-bienestar_error.txt  pyproject.toml  run_eeuu_only.py  run_noruega_only.py
.streamlit/: config.toml
economy_simulator/: __init__.py  accelerators.py  batch_reports.py  cli.py  domain.py  engine.py  metrics.py  policies.py  reporting.py  scenario_runner.py
economy_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
output/pdf/country_profiles/: estados-unidos-mixto_anual.csv  estados-unidos-mixto_mensual.csv  guatemala-mas-liberal_anual.csv  guatemala-mas-liberal_mensual.csv  noruega-economia-del-bienestar_anual.csv  noruega-economia-del-bienestar_mensual.csv
output/pdf/custom_240m_5000p/: simulacion_base_240m_5000h_anual.csv  simulacion_base_240m_5000h_mensual.csv
output/pdf/sanity4/: estado-social-intensivo-benchmark_anual.csv  estado-social-intensivo-benchmark_mensual.csv  estados-unidos-mixto_anual.csv  (+5 more)
outputs/margenes_tiempo/: EEUU_margen_neto_tiempo.xlsx  EEUU_margenes_tiempo.xlsx
tests/: test_money_flow.py
(+12 files in other folders)
