[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "economy-simulator"
version = "0.1.0"
description = "Agent-based capitalist economy simulator"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "reportlab",
    "streamlit",
]

[project.scripts]
economy-sim = "economy_simulator.cli:main"
economy-sim-report = "economy_simulator.batch_reports:main"

[tool.setuptools]
packages = ["economy_simulator"]
